k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shieldnet
  labels:
    project: shieldnet-nyc
    environment: production
