k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shieldnet-ingress
  namespace: shieldnet
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: shieldnet.nyc.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shieldnet-benefits-api
                port:
                  number: 80
